[package]
name = "bhb-rs"
version = "0.1.0"
authors = ["erin moon <erin@hecke.rs>"]
description = "board support crate for the Winterbloom Big Honking Button"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"

[dependencies]
cortex-m = "0.7.0"
embedded-hal = "0.2.4"
nb = "1.0"

[dependencies.atsamd-hal]
version = "0.11"

[dependencies.cortex-m-rt]
version = "0.6"
optional = true

[dependencies.panic-abort]
version = "0.3"
optional = true

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.panic-semihosting]
version = "0.5"
optional = true

[features]
default = ["rt", "atsamd-hal/samd21g", "panic_halt"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true # doesn't matter bc symbols get stripped from elf before flash anyway
lto = true
opt-level = "s"